@@ -900,6 +900,9 @@ def searchUnpackXZ(filename, tempdir=None, blacklist=[], offsets={}, envvars=Non
 	diroffsets = []
 	counter = 1
 	extracted = []
+	datafile = open(filename, 'rb')
+	data = datafile.read()
+	datafile.close()
 	## If we only have one header, it makes more sense to work backwards
 	## since most archives are probably complete files.
 	if len(offsets['xz']) == 1:
@@ -923,8 +926,14 @@ def searchUnpackXZ(filename, tempdir=None, blacklist=[], offsets={}, envvars=Non
 			if blacklistoffset != None:
 				continue
 			else:
+				## bytes 7 and 8 in the stream are streamflags. These exact bytes
+				## should also be present just before the trailer according to the
+				## XZ file format documentation.
+				streamflags = data[offset+6:offset+8]
+				if data[trail-2:trail] != streamflags:
+					continue
 				tmpdir = dirsetup(tempdir, filename, "xz", counter)
-				res = unpackXZ(filename, offset, trail, tmpdir)
+				res = unpackXZ(data, offset, trail, tmpdir)
 				if res != None:
 					diroffsets.append((res, offset, 0))
 					blacklist.append((offset, trail))
@@ -935,23 +944,16 @@ def searchUnpackXZ(filename, tempdir=None, blacklist=[], offsets={}, envvars=Non
 					os.rmdir(tmpdir)
 	return (diroffsets, blacklist, [])
 
-def unpackXZ(filename, offset, trailer, tempdir=None):
+def unpackXZ(data, offset, trailer, tempdir=None):
 	## first unpack the data, write things to a file and return
 	## the directory if the file is not empty
 	## Assumes (for now) that xz is in the path
-	## TODO: big file fixes
-	datafile = open(filename, 'rb')
-	data = datafile.read()
-	datafile.close()
 
 	tmpdir = unpacksetup(tempdir)
 	tmpfile = tempfile.mkstemp(dir=tmpdir)
-	#os.fdopen(tmpfile[0]).close()
 	### trailer has size of 2. Add 1 because [lower, upper)
 	os.write(tmpfile[0], data[offset:trailer+3])
 	os.fdopen(tmpfile[0]).close()
-
-	#unpackFile(filename, offset, tmpfile[1], tmpdir, trailer+3)
 
 	## test integrity of the file
 	p = subprocess.Popen(['xz', '-l', tmpfile[1]], stdout=subprocess.PIPE, stderr=subprocess.PIPE, close_fds=True)
