@@ -1,5 +1,6 @@
 2012-11-12
 * fix config initialization bug in batgui
+* add extra sanity checks in XZ unpacking based on 'streamflags'
 
 2012-11-11
 * allow multiple values in 'storetype'
